--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,22 @@
-/* write your override styles here */
+#wall .tag-1 {
+    display:none;
+}
+#wall div#tag-2{
+    background:none;
+}
+div#wall div#tag-3.slick{
+    background-image: none;
+}
+
+div#wall div.parent div#tag-4.slick{
+    display: none;
+}
+div#wall div.parent div#tag-5.slick{
+    display: none;
+}
+div#wall div.parent div div>div#tag-6{
+    display:none;
+}
+body div#wall div.parent div >div#tag-7.slick{
+    display: none;
+}
